--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <img src="images/bowlspfp.png"></img></a>
                     <a href="https://twitter.com/intent/follow?screen_name=turntducky">
                     <img src="images/turntducky.png"></img></a>
+                        <a href="https://twitter.com/intent/follow?screen_name=c0dine">
+                        <img src="images/c0dine.png"></img></a>
     </center>
 </main>
     </body>
