--- a/index.html
+++ b/index.html
@@ -4,20 +4,80 @@
 <head>
     <title>harryioss | Website</title>
 
-<h2></h2>
+<!-- Stylesheet File -->
+<link href="css/main.css" rel="stylesheet">
+</head>
 
-    <center>
-        <a href="https://twitter.com/intent/follow?screen_name=cr4ptic">
-        <img src="images/cryptic.png"></img></a>
-            <a href="https://twitter.com/intent/follow?screen_name=pixeljellyfish">
-            <img src="images/pixel.png"></img></a>
-                <a href="https://twitter.com/intent/follow?screen_name=myllo_steven">
-                <img src="images/bowlspfp.png"></img></a>
-                    <a href="https://twitter.com/intent/follow?screen_name=turntducky">
-                    <img src="images/turntducky.png"></img></a>
-                        <a href="https://twitter.com/intent/follow?screen_name=c0dine">
-                        <img src="images/c0dine.png"></img></a>
-    </center>
+<center>
+
+<!--/ Special Thanks /-->
+    <section id="staff">
+        <h2 class="h2staff">Special Thanks</h2>
+        <user data-aos="zoom-in-up">
+            <div class="icon-container">
+              <img src="images/cryptic.png"/>
+            </div>
+            <a href="https://twitter.com/intent/follow?screen_name=cr4ptic">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <h3>Cryptic</h3>
+            <p>Owner, Web Developer</p>
+          </user>
+          <user data-aos="zoom-in-up">
+            <div class="icon-container">
+              <img src="images/pixel.png"/>
+            </div>
+            <a href="https://twitter.com/intent/follow?screen_name=Pixeljellyfish">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <h3>pixeljellyfish</h3>
+            <p>Web Developer</p>
+          </user>
+          <user data-aos="zoom-in-up">
+            <div class="icon-container">
+              <img src="images/harryioss.png"/>
+            </div>
+            <a href="https://twitter.com/intent/follow?screen_name=harryioss">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <h3>harryioss</h3>
+            <p>Web Developer</p>
+          </user>
+          <user data-aos="zoom-in-up">
+            <div class="icon-container">
+              <img src="images/bowl.png"/>
+            </div>
+            <a href="https://twitter.com/intent/follow?screen_name=myllo_steven">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <h3>Bowl_V2</h3>
+            <p>The TikTok Guy</p>
+          </user>
+          <user data-aos="zoom-in-up">
+            <div class="icon-container">
+              <img src="images/turntducky.png"/>
+            </div>
+            <a href="https://twitter.com/intent/follow?screen_name=turntducky">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <h3>Turntducky</h3>
+            <p>Web Developer</p>
+          </user>
+          <user data-aos="zoom-in-up">
+            <div class="icon-container">
+              <img src="images/c0dine.png"/>
+            </div>
+            <a href="https://twitter.com/intent/follow?screen_name=c0dine">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <h3>c0dine</h3>
+            <p>Web Developer</p>
+          </user>
+        </div>
+      </section>
+  <!--/ Special Thanks /-->
+
+</center>
 </main>
     </body>
 </html>
