--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- Stylesheet File -->
 <link href="css/main.css" rel="stylesheet">
 </head>
-
+<body>
 <center>
 
 <!--/ Special Thanks /-->
@@ -31,7 +31,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>pixeljellyfish</h3>
-            <p>Web Developer</p>
+            <p>Senior Admin, Web Developer</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -41,7 +41,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>harryioss</h3>
-            <p>Web Developer</p>
+            <p>Senior Admin, Web Developer</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -51,7 +51,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>Bowl_V2</h3>
-            <p>The TikTok Guy</p>
+            <p>Senior Admin, The TikTok Guy</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -61,24 +61,22 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>Turntducky</h3>
-            <p>Web Developer</p>
+            <p>Moderator, Web Developer</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
               <img src="images/c0dine.png"/>
-            </div>
+              </div>
             <a href="https://twitter.com/intent/follow?screen_name=c0dine">
-              <i class="fa fa-twitter"></i>
+            <i class="fa fa-twitter"></i>
             </a>
             <h3>c0dine</h3>
-            <p>Web Developer</p>
-          </user>
-        </div>
-      </section>
+            <p>Junior Admin, Web Developer</p>
+            </user>
+            </section>
   <!--/ Special Thanks /-->
 
 </center>
-</main>
     </body>
 </html>
     
