--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <center>
 
+<!--/ Cryptic Date /-->   
     <div class="top" style="display:block;width:100%;padding:10px;height:100px;">
         <p style="font: size 14;px;">
         <script>
@@ -25,6 +26,16 @@
             document.write("<font color='777777'>"+dayarray[day]+", "+montharray[month]+" "+daym+"<\/font>")
         </script>
     </div>
+<!--/ End Cryptic Date /-->  
+
+<!--/ About Me /-->   
+    <section id="about">
+        <div class="body-content">
+            <h2>About Me!</h2>
+            <p>Website Developer</p>
+            <p></p>
+        </div>
+<!--/ End About Me /-->
 
 <!--/ Special Thanks /-->
     <section id="staff">
@@ -47,7 +58,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>pixeljellyfish</h3>
-            <p>Senior Admin, Web Developer</p>
+            <p>Web Developer</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -57,7 +68,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>harryioss</h3>
-            <p>Senior Admin, Web Developer</p>
+            <p>Web Developer</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -67,7 +78,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>Bowl_V2</h3>
-            <p>Senior Admin, The TikTok Guy</p>
+            <p>The TikTok Guy</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -77,7 +88,7 @@
               <i class="fa fa-twitter"></i>
             </a>
             <h3>Turntducky</h3>
-            <p>Moderator, Web Developer</p>
+            <p>Web Developer</p>
           </user>
           <user data-aos="zoom-in-up">
             <div class="icon-container">
@@ -87,10 +98,10 @@
             <i class="fa fa-twitter"></i>
             </a>
             <h3>c0dine</h3>
-            <p>Junior Admin, Web Developer</p>
+            <p>Web Developer</p>
             </user>
             </section>
-  <!--/ Special Thanks /-->
+<!--/ End Special Thanks /-->
 
 </center>
     </body>
