added backend information

--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
-    <title>harryioss | Website</title>
+  <title>harryioss | Website</title>
+
+<!-- SEO -->
+  <meta name="keywords" content="Harryioss,harryioss,harryios">
+
+<!-- Open Graph data -->
+  <meta name="og:title" content="harryioss">
+  <meta name="og:type" content="website">
+  <meta name="og:image" content="images/harryioss.png">
+  <meta name="og:description" content="My Website">
+  <meta name="og:site_name" content="harryioss">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, viewport-fit=cover">
+
+<!-- Icons -->
+  <link rel="shortcut icon" href="assets/images/logo/cryptic.ico" type="image/x-icon">
+  <link rel="icon" href="assets/images/logo/cryptic.ico" type="image/x-icon">
 
 <!-- Stylesheet -->
-<link href="css/main.css" rel="stylesheet">
-</head>
-<body>
-<center>
+  <link href="css/main.css" rel="stylesheet">
+  </head>
 
+  <body>
+    <center>
 <!--/ Cryptic Date /-->   
     <div class="top" style="display:block;width:100%;padding:10px;height:100px;">
         <p style="font: size 14;px;">
@@ -38,8 +53,8 @@
 <!--/ End About Me /-->
 
 <!--/ Special Thanks /-->
-    <section id="staff">
-        <h2 class="h2staff">Special Thanks</h2>
+    <section id="thanks">
+        <h2 class="h2thanks">Special Thanks</h2>
         <user data-aos="zoom-in-up">
             <div class="icon-container">
               <img src="images/cryptic.png"/>
@@ -100,7 +115,7 @@
             <h3>c0dine</h3>
             <p>Web Developer</p>
             </user>
-            </section>
+          </section>
 <!--/ End Special Thanks /-->
 
 </center>
