--- a/index.html
+++ b/index.html
@@ -55,71 +55,41 @@
 
 <!--/ Special Thanks /-->
     <section id="thanks">
-        <h2 class="h2thanks">Special Thanks</h2>
-        <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/cryptic.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=cr4ptic">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>Cryptic</h3>
-            <p>Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/pixel.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=Pixeljellyfish">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>pixeljellyfish</h3>
-            <p>Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/harryioss.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=harryioss">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>harryioss</h3>
-            <p>Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/bowl.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=myllo_steven">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>Bowl_V2</h3>
-            <p>The TikTok Guy</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/turntducky.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=turntducky">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>Turntducky</h3>
-            <p>Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/c0dine.png"/>
-              </div>
-            <a href="https://twitter.com/intent/follow?screen_name=c0dine">
-            <i class="fa fa-twitter"></i>
-            </a>
-            <h3>c0dine</h3>
-            <p>Web Developer</p>
-            </user>
-          </section>
+      <h2 class="h2staff">The Team!</h2>
+        <h3>CRYPTIC</h3>
+            <users><a href="https://twitter.com/cr4ptic">
+                    <img src="images/cryptic.png"></img>
+                    </a>
+                  </users>
+            <h3>HARRYIOSS</h3>
+            <users><a href="https://twitter.com/harryioss">
+                    <img src="images/harryioss.png"></img>
+                    </a>
+                  </users>
+            <h3>PIXELJELLYFISH</h3>
+                    <users><a href="https://twitter.com/pixeljellyfish">
+                        <img src="images/pixel.png"></img>
+                </a>
+              </users>
+              <h3>TURNTDUCKY</h3>
+                <users><a href="https://twitter.com/turntducky">
+                    <img src="images/turntducky.png"></img>
+                    </a>
+                  </users>
+                  <h3>BOWL_V2</h3>
+                <users><a href="https://twitter.com/myllo_steven">
+                    <img src="images/bowl.png"></img>
+                    </a>
+                  </users>
+                  <h3>C0DINE</h3>
+                <users><a href="https://twitter.com/c0dine">
+                    <img src="images/c0dine.png""></img>
+                    </a>
+                  </users>
 <!--/ End Special Thanks /-->
-
-</center>
+          </div>
+            <p>&copy; Copyright 2021 - Cryptic Development</p>
+    </section>
     </body>
 </html>
     
