--- a/index.html
+++ b/index.html
@@ -2,81 +2,104 @@
 <html lang="en-us">
 
 <head>
-    <title>harryioss | Website</title>
+  <title>harryioss | Website</title>
 
-<!-- Stylesheet File -->
-<link href="css/main.css" rel="stylesheet">
+  <!-- Stylesheet File -->
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/nav.css" rel="stylesheet">
+  <!-- Stylesheet File End -->
+
+  <!-- JavaScript Files -->
+  <script src="js/nav.js"></script>
+  <script src="js/main.js"></script>
+  <!-- JavaScript Files End -->
+
+  <!-- NavBar -->
+  <nav class="nav">
+    <a href="#Home" class="nav-item is-active" active-color="orange">Home</a>
+
+    <a href="#About" class="nav-item" active-color="green">About</a>
+
+    <a href="#Staff" class="nav-item" active-color="blue">Staff</a>
+
+    <a href="https://github.com/jailbreak-discord-developers/harryioss-website?focus_code=true" class="nav-item">Github
+      Sourcecode</a>
+
+    <span class="nav-indicator"></span>
+  </nav>
+
+  <!-- NavBar End -->
+
 </head>
+
 <body>
-<center>
-
-<!--/ Special Thanks /-->
+  <center>
+    <!--/ Special Thanks /-->
     <section id="staff">
-        <h2 class="h2staff">Special Thanks</h2>
-        <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/cryptic.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=cr4ptic">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>Cryptic</h3>
-            <p>Owner, Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/pixel.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=Pixeljellyfish">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>pixeljellyfish</h3>
-            <p>Senior Admin, Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/harryioss.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=harryioss">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>harryioss</h3>
-            <p>Senior Admin, Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/bowl.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=myllo_steven">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>Bowl_V2</h3>
-            <p>Senior Admin, The TikTok Guy</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/turntducky.png"/>
-            </div>
-            <a href="https://twitter.com/intent/follow?screen_name=turntducky">
-              <i class="fa fa-twitter"></i>
-            </a>
-            <h3>Turntducky</h3>
-            <p>Moderator, Web Developer</p>
-          </user>
-          <user data-aos="zoom-in-up">
-            <div class="icon-container">
-              <img src="images/c0dine.png"/>
-              </div>
-            <a href="https://twitter.com/intent/follow?screen_name=c0dine">
-            <i class="fa fa-twitter"></i>
-            </a>
-            <h3>c0dine</h3>
-            <p>Junior Admin, Web Developer</p>
-            </user>
-            </section>
-  <!--/ Special Thanks /-->
+      <h2 class="h2staff">Special Thanks</h2>
+      <user data-aos="zoom-in-up">
+        <div class="icon-container">
+          <img src="images/cryptic.png">
+        </div>
+        <a href="https://twitter.com/intent/follow?screen_name=cr4ptic">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <h3>Cryptic</h3>
+        <p>Web Developer</p>
+      </user>
+      <user data-aos="zoom-in-up">
+        <div class="icon-container">
+          <img src="images/pixel.png">
+        </div>
+        <a href="https://twitter.com/intent/follow?screen_name=Pixeljellyfish">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <h3>pixeljellyfish</h3>
+        <p>Web Developer</p>
+      </user>
+      <user data-aos="zoom-in-up">
+        <div class="icon-container">
+          <img src="images/harryioss.png">
+        </div>
+        <a href="https://twitter.com/intent/follow?screen_name=harryioss">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <h3>harryioss</h3>
+        <p>Web Developer</p>
+      </user>
+      <user data-aos="zoom-in-up">
+        <div class="icon-container">
+          <img src="images/bowl.png">
+        </div>
+        <a href="https://twitter.com/intent/follow?screen_name=myllo_steven">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <h3>Bowl_V2</h3>
+        <p>The TikTok Guy</p>
+      </user>
+      <user data-aos="zoom-in-up">
+        <div class="icon-container">
+          <img src="images/turntducky.png">
+        </div>
+        <a href="https://twitter.com/intent/follow?screen_name=turntducky">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <h3>Turntducky</h3>
+        <p>Web Developer</p>
+      </user>
+      <user data-aos="zoom-in-up">
+        <div class="icon-container">
+          <img src="images/c0dine.png">
+        </div>
+        <a href="https://twitter.com/intent/follow?screen_name=c0dine">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <h3>c0dine</h3>
+        <p>Web Developer</p>
+      </user>
+    </section>
+    <!--/ Special Thanks End/-->
+  </center>
+</body>
 
-</center>
-    </body>
 </html>
-    
