--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="#">Jailbreak</a>
           <ul>
             <li><a href="https://checkra.in/">Checkra1n</a></li>
-            <li><a href="https://chimera.sh/">Chimra</a></li>
+            <li><a href="https://chimera.sh/">Chimera</a></li>
             <li><a href="https://unc0ver.dev/">Unc0ver</a></li>
           </ul>
         </li>
