--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="icon-container">
           <img src="images/cryptic.png">
         </div>
-        <a href="https://twitter.com/intent/follow?screen_name=cr4ptic">
+        <a href="https://twitter.com/cr4ptic">
           <i class="fa fa-twitter"></i>
         </a>
         <h3>Cryptic</h3>
@@ -87,7 +87,7 @@
         <div class="icon-container">
           <img src="images/pixel.png">
         </div>
-        <a href="https://twitter.com/intent/follow?screen_name=Pixeljellyfish">
+        <a href="https://twitter.com/pixeljellyfish">
           <i class="fa fa-twitter"></i>
         </a>
         <h3>pixeljellyfish</h3>
@@ -97,7 +97,7 @@
         <div class="icon-container">
           <img src="images/harryioss.png">
         </div>
-        <a href="https://twitter.com/intent/follow?screen_name=harryioss">
+        <a href="https://twitter.com/harryioss">
           <i class="fa fa-twitter"></i>
         </a>
         <h3>harryioss</h3>
@@ -107,7 +107,7 @@
         <div class="icon-container">
           <img src="images/bowl.png">
         </div>
-        <a href="https://twitter.com/intent/follow?screen_name=myllo_steven">
+        <a href="https://twitter.com/myllo_steven">
           <i class="fa fa-twitter"></i>
         </a>
         <h3>Bowl_V2</h3>
@@ -117,7 +117,7 @@
         <div class="icon-container">
           <img src="images/turntducky.png">
         </div>
-        <a href="https://twitter.com/intent/follow?screen_name=turntducky">
+        <a href="https://twitter.com/turntducky">
           <i class="fa fa-twitter"></i>
         </a>
         <h3>Turntducky</h3>
@@ -127,7 +127,7 @@
         <div class="icon-container">
           <img src="images/c0dine.png">
         </div>
-        <a href="https://twitter.com/intent/follow?screen_name=c0dine">
+        <a href="https://twitter.com/c0dine">
           <i class="fa fa-twitter"></i>
         </a>
         <h3>c0dine</h3>
