--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
+  <meta charset="UTF-8">
   <title>harryioss | Website</title>
 
   <!-- Meta Data Shit -->
