--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>harryioss | Website</title>
-
-  <!-- Meta Data Shit -->
+  <!-- SEO -->
+  <meta name="keywords" content="harryioss,harryios">
+  <!-- Meta Data -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="og:title" content="Cryptic">
+  <meta name="og:type" content="website">
+  <meta name="og:image" content="https://https://crypticdeveloper.xyz/assets/images/logo/cryptic.jpg">
+  <meta name="og:description" content="My Personal Website">
+  <meta name="og:site_name" content="Cryptic">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- Stylesheet File -->
   <link href="css/main.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
