--- a/index.html
+++ b/index.html
@@ -1,148 +1,131 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-US">
 
 <head>
-  <meta charset="UTF-8">
-  <title>harryioss | Website</title>
-  <!-- SEO -->
-  <meta name="keywords" content="harryioss,harryios">
-  <!-- Meta Data -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="og:title" content="Cryptic">
-  <meta name="og:type" content="website">
-  <meta name="og:image" content="https://https://crypticdeveloper.xyz/assets/images/logo/cryptic.jpg">
-  <meta name="og:description" content="My Personal Website">
-  <meta name="og:site_name" content="Cryptic">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <!-- Stylesheet File -->
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/nav.css" rel="stylesheet">
-  <!-- Stylesheet File End -->
+    <title>Cryptic | Website</title>
+<!-- SEO -->
+    <meta name="keywords" content="harryioss,harryios,Tweaks,harryiosdev,harrythedev">
+<!-- Open Graph data -->
+    <meta charset="UTF-8">
+    <meta name="og:title" content="harryioss">
+    <meta name="og:type" content="website">
+    <meta name="og:url" content="">
+    <meta name="og:image" content="">
+    <meta name="og:description" content="My Website">
+    <meta name="og:site_name" content="harryioss">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!-- Icons -->
+    <link rel="shortcut icon" href="images/harryioss.png" type="image/x-icon">
+    <link rel="icon" href="images/harryioss.png" type="image/x-icon">
+<!-- Stylesheet -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/shit.css">
+<!-- End Stylesheet -->
 
-  <!-- JavaScript Files -->
-  <script src="js/nav.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/navbarfix.js"></script>
-  <script src="js/resize.js"></script>
-  <script src="js/showandhide.js"></script>
-  <script src="js/toggle menu.js"></script>
-  <script src="js/unbindhover.js"></script>
-  <script src="js/windowevents.js"></script>
-  <script src="https://kit.fontawesome.com/9cd85c0021.js" crossorigin="anonymous"></script>
-  <!-- JavaScript Files End -->
+<!--JavaScript-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/nav.js"></script>
+<script src="js/sm00th.js"></script>
+<!--End JavaScript-->
 
-  <!-- NavBar -->
-<div class="container">
-  <a class="toggleMenu" href="#">Menu</a>
-  <ul class="nav">
-    <li class="test">
-      <a href="#">Menu</a>
-      <ul>
-        <li>
-          <a href="#">Harryioss Website</a>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Team">Web Developers</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">Jailbreak</a>
-          <ul>
-            <li><a href="https://checkra.in/">Checkra1n</a></li>
-            <li><a href="https://chimera.sh/">Chimera</a></li>
-            <li><a href="https://unc0ver.dev/">Unc0ver</a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-</ul>
-</div>
-  <!-- NavBar End -->
-</head>
+    </head>
 <body>
-<!-- Cryptic Date -->
-  <div class="top" style="display:block;width:100%;padding:10px;height:100px;">
-    <p style="font: size 14;px;">
-    <script>
-    var mydate=new Date()
-    var year=mydate.getYear()
-    var day=mydate.getDay()
-    var month=mydate.getMonth()
-    var daym=mydate.getDate()
-    if (daym<10)
-        daym="0"+daym
-        var dayarray=new Array("Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday")
-        var montharray=new Array("January","February","March","April","May","June","July","August","September","October","November","December")
-        document.write("<font color='777777'>"+dayarray[day]+", "+montharray[month]+" "+daym+"<\/font>")
-    </script>
-<!-- Cryptic Date End -->
-  <center>
-    <!--/ Special Thanks /-->
-    <section id="staff">
-      <h2 class="h2staff">Special Thanks</h2>
-      <user data-aos="zoom-in-up">
-        <div class="icon-container">
-          <img src="images/cryptic.png">
+
+<!--Nav Bar-->
+    <div class="nav-container">
+        <navbar id="navbar">
+            <ul class="nav__links">
+                <li><a href="#about">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a class="shrink" href="#discord">DISCORD</a></li>
+                <li><a href="#team">TEAM</a></li>
+                <li><a href="#jailbreak">JAILBREAK</a></li>
+            </ul>
+        </navbar>
+    </div>
+<!--End Nav Bar-->
+
+<!--About Me-->
+    <section id="about">
+        <div class="body-content">
+            <h2>About Me!</h2>
+        <a href="https://twitter.com/harryioss?s=20">
+                <div class="icon-container">
+                    <img src="images/harryioss.png" />
+                <br>
+                <p>Website Developer</a></p>
+            <p>iOS Software/App Developer</p>
+            <p></p>
         </div>
-        <a href="https://twitter.com/cr4ptic">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <h3>Cryptic</h3>
-        <p>Web Developer</p>
-      </user>
-      <user data-aos="zoom-in-up">
-        <div class="icon-container">
-          <img src="images/pixel.png">
-        </div>
-        <a href="https://twitter.com/pixeljellyfish">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <h3>pixeljellyfish</h3>
-        <p>Web Developer</p>
-      </user>
-      <user data-aos="zoom-in-up">
-        <div class="icon-container">
-          <img src="images/harryioss.png">
-        </div>
-        <a href="https://twitter.com/harryioss">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <h3>harryioss</h3>
-        <p>Web Developer</p>
-      </user>
-      <user data-aos="zoom-in-up">
-        <div class="icon-container">
-          <img src="images/bowl.png">
-        </div>
-        <a href="https://twitter.com/myllo_steven">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <h3>Bowl_V2</h3>
-        <p>The TikTok Guy</p>
-      </user>
-      <user data-aos="zoom-in-up">
-        <div class="icon-container">
-          <img src="images/turntducky.png">
-        </div>
-        <a href="https://twitter.com/turntducky">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <h3>Turntducky</h3>
-        <p>Web Developer</p>
-      </user>
-      <user data-aos="zoom-in-up">
-        <div class="icon-container">
-          <img src="images/c0dine.png">
-        </div>
-        <a href="https://twitter.com/c0dine">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <h3>c0dine</h3>
-        <p>Web Developer</p>
-      </user>
     </section>
-    <!--/ Special Thanks End/-->
-  </center>
-</body>
+<!--End About Me-->
+
+<!--Thanks-->
+<center>
+<section id="staff">
+    <h2>The Team</h2>
+    <user data-aos="zoom-in-up">
+      <div class="icon-container">
+        <img src="images/cryptic.png">
+      </div>
+      <a href="https://twitter.com/cr4ptic">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <h3>Cryptic</h3>
+      <p>Web Developer</p>
+    </user>
+    <user data-aos="zoom-in-up">
+      <div class="icon-container">
+        <img src="images/pixel.png">
+      </div>
+      <a href="https://twitter.com/pixeljellyfish">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <h3>pixeljellyfish</h3>
+      <p>Web Developer</p>
+    </user>
+    <user data-aos="zoom-in-up">
+      <div class="icon-container">
+        <img src="images/harryioss.png">
+      </div>
+      <a href="https://twitter.com/harryioss">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <h3>harryioss</h3>
+      <p>Web Developer</p>
+    </user>
+    <user data-aos="zoom-in-up">
+      <div class="icon-container">
+        <img src="images/bowl.png">
+      </div>
+      <a href="https://twitter.com/myllo_steven">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <h3>Bowl_V2</h3>
+      <p>The TikTok Guy</p>
+    </user>
+    <user data-aos="zoom-in-up">
+      <div class="icon-container">
+        <img src="images/turntducky.png">
+      </div>
+      <a href="https://twitter.com/turntducky">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <h3>Turntducky</h3>
+      <p>Web Developer</p>
+    </user>
+    <user data-aos="zoom-in-up">
+      <div class="icon-container">
+        <img src="images/c0dine.png">
+      </div>
+      <a href="https://twitter.com/c0dine">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <h3>c0dine</h3>
+      <p>Web Developer</p>
+    </user>
+  </section>
+</center>
+  <!--/ Special Thanks End/-->
+    </body>
 </html>
