--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Cryptic | Website</title>
+    <title>Harryioss | Website</title>
 <!-- SEO -->
     <meta name="keywords" content="harryioss,harryios,Tweaks,harryiosdev,harrythedev">
 <!-- Open Graph data -->
