added a new navbar

--- a/index.html
+++ b/index.html
@@ -20,40 +20,65 @@
 <!-- Stylesheet -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/shit.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 <!-- End Stylesheet -->
 
 <!--JavaScript-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/nav.js"></script>
 <script src="js/sm00th.js"></script>
+<script src="js/navbar.js"></script>
+<script src="lib/jquery/jquery.min.js"></script>
+<script src="lib/jquery/jquery-migrate.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <!--End JavaScript-->
 
     </head>
 <body>
 
-<!--Nav Bar-->
-    <div class="nav-container">
-        <navbar id="navbar">
-            <ul class="nav__links">
-                <li><a href="#about">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a class="shrink" href="#discord">DISCORD</a></li>
-                <li><a href="#team">TEAM</a></li>
-                <li><a href="#jailbreak">JAILBREAK</a></li>
-            </ul>
-        </navbar>
+  <!--/ Nav Bar /-->
+  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll" href="#home"><img src="img/reload.png"></a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll active" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#staff">Staff</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="https://crypticdeveloper.xyz/">Cryptic's Website</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://discord.gg/vG23fCF">Discord</a>
+          </li>
+        </ul>
+      </div>
     </div>
-<!--End Nav Bar-->
+  </nav>
+  <!--/ End Nav Bar /-->
 
 <!--About Me-->
     <section id="about">
         <div class="body-content">
             <h2>About Me!</h2>
-        <a href="https://twitter.com/harryioss?s=20">
                 <div class="icon-container">
                     <img src="images/harryioss.png" />
                 <br>
-                <p>Website Developer</a></p>
+                </div>
+                <p>Website Developer<a></p>
             <p>iOS Software/App Developer</p>
             <p></p>
         </div>
@@ -64,6 +89,10 @@
 <center>
 <section id="staff">
     <h2>The Team</h2>
+      </a>
+      <h3> </h3>
+      <p> </p>
+    </user>
     <user data-aos="zoom-in-up">
       <div class="icon-container">
         <img src="images/cryptic.png">
