--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta charset="UTF-8">
     <meta name="og:title" content="harryioss">
     <meta name="og:type" content="website">
-    <meta name="og:url" content="">
-    <meta name="og:image" content="">
+    <meta name="og:image" content="images/harryioss.png">
     <meta name="og:description" content="My Website">
     <meta name="og:site_name" content="harryioss">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -19,14 +18,14 @@
     <link rel="icon" href="images/harryioss.png" type="image/x-icon">
 <!-- Stylesheet -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/shit.css">
+    <link rel="stylesheet" href="css/design.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 <!-- End Stylesheet -->
 
 <!--JavaScript-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/jqueryv3.4.1.js"></script>
 <script src="js/nav.js"></script>
 <script src="js/sm00th.js"></script>
 <script src="js/navbar.js"></script>
@@ -62,7 +61,7 @@
             <a class="nav-link js-scroll" href="https://crypticdeveloper.xyz/">Cryptic's Website</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://discord.gg/vG23fCF">Discord</a>
+            <a class="nav-link" href="https://discordwebsite.xyz">Discord</a>
           </li>
         </ul>
       </div>
