--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="js/windowevents.js"></script>
   <script src="https://kit.fontawesome.com/9cd85c0021.js" crossorigin="anonymous"></script>
   <!-- JavaScript Files End -->
-
+<p>This is test LOL don't look here</p>
   <!-- NavBar -->
 <div class="container">
   <a class="toggleMenu" href="#">Menu</a>
